bk_ida/gccida/g0/initial_reg_note_copy
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initial_reg_note_copy/src/unroll.c:2174:21: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
copy = rtx_alloc( ( rtx_code)*( _WORD *)notes); 
                    ^~~~~~~~
                    rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initial_reg_note_copy/src/unroll.c:2174:30: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
copy = rtx_alloc( ( rtx_code)*( _WORD *)notes); 
                  ~~~~~~~~~~~^~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initial_reg_note_copy/src/obj/unroll.o] Error 1
